--- a/server/confilter.conf
+++ b/server/confilter.conf
@@ -1,3 +1,6 @@
+[server]
+logLevel=INFO
+listenAddr = 127.0.0.1:8080
 [dictionary]
-aaa=../aaa.txt
-bbb=../bbb.txt
+aaa=../data/aaa.txt
+bbb=../data/bbb.txt
